правки по онбордингу, сверстан блок услуги со слайдером

--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
   "dependencies": {
     "jquery": "^3.5.1",
     "jquery-form-styler": "^2.0.2",
-    "parallax-imagescroll": "^0.2.3",
-    "rateyo": "^2.3.5",
     "magnific-popup": "^1.1.0",
     "normalize.css": "^8.0.1",
-    "slick-carousel": "^1.8.1"
+    "parallax-imagescroll": "^0.2.3",
+    "rateyo": "^2.3.5",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^6.7.0"
   }
 }
